--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,7 @@
 
   <body>
     <h1>URL Shortener Microservice</h1>
+    <h3>by Peter Lebedev</h2>
     <main>
       <section>
         <form action="api/shorturl/new" method="POST">
