--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
     <h3>by Peter Lebedev</h2>
     <main>
       <section>
-        <form action="api/shorturl/new" method="POST">
+        <form action="api/shorturl" method="POST">
           <fieldset>
             <legend>URL Shortener</legend>
             <label for="url_input">URL:</label>
